add a basic dummy REST API

--- a/src/main/webapp/views/dummy.html
+++ b/src/main/webapp/views/dummy.html
@@ -1,3 +1,3 @@
 <div ng-controller="DummyCtrl">
-	<p>Result from RESTful service is: {{ firstname }}</p>
+	<p>Result from RESTful service is: {{ firstname + " " + lastname }}</p>
 </div>
