--- a/src/main/webapp/views/user-list.html
+++ b/src/main/webapp/views/user-list.html
@@ -1,20 +1,25 @@
-<div class="panel">
-	<table class="table table-striped">
-		<thead>
-		<tr>
-			<th>First name</th>
-			<th>Last name</th>
-			<th></th>
-			<th></th>
-		</tr>
-		</thead>
-		<tbody>
-		<tr ng-repeat="user in users">
-			<td>{{user.firstName}}</td>
-			<td>{{user.lastName}}</td>
-			<td><a ng-click="editUser(user.id)" class="btn btn-small btn-primary">edit</a></td>
-			<td><a ng-click="deleteUser(user.id)" class="btn btn-small btn-primary">delete</a></td>			
-		</tr>
-		</tbody>
-	</table>
+<div class="panel" ng-controller="UserListCtrl">
+	<h3>{{ firstName + " " + lastName }}</h3>
+   <table class="table table-striped table-condensed">
+      <thead>
+      <tr>
+         <th class="col-md-4">First name</th>
+         <th class="col-md-4">Last name</th>
+         <th class="col-md-4"></th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr ng-repeat="user in users">
+         <td>{{user.firstName}}</td>
+         <td>{{user.lastName}}</td>
+         <td class="text-center">
+         	<a ng-click="editUser(user.id)" class="btn btn-small btn-primary">edit</a>
+         	<a ng-click="deleteUser(user.id)" class="btn btn-small btn-danger">delete</a>
+         </td>
+      </tr>
+      </tbody>
+   </table>
+   <div>
+	   <a ng-click="createNewUser()" class="btn btn-small btn-success">create new user</a>
+   </div>
 </div>
