add CRUD operations with RESTful API

--- a/src/main/webapp/views/user-list.html
+++ b/src/main/webapp/views/user-list.html
@@ -1,5 +1,4 @@
 <div class="panel" ng-controller="UserListCtrl">
-	<h3>{{ firstName + " " + lastName }}</h3>
    <table class="table table-striped table-condensed">
       <thead>
       <tr>
@@ -9,12 +8,13 @@
       </tr>
       </thead>
       <tbody>
-      <tr ng-repeat="user in users">
+      <tr ng-repeat="user in users | orderBy: ['firstName', 'lastName']">
          <td>{{user.firstName}}</td>
          <td>{{user.lastName}}</td>
          <td class="text-center">
          	<a ng-click="editUser(user.id)" class="btn btn-small btn-primary">edit</a>
-         	<a ng-click="deleteUser(user.id)" class="btn btn-small btn-danger">delete</a>
+         	<a ng-click="deleteUser(user)" class="btn btn-small btn-warning" ng-hide="confirmDelete">delete</a>
+         	<a ng-click="confirmDeleteUser(user)" class="btn btn-small btn-danger" ng-show="confirmDelete">confirm delete</a>
          </td>
       </tr>
       </tbody>
